// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Auth Template Generated authstack template in default flow 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ShouldNotCreateEnvResources": {
      "Fn::Equals": [
        {
          "Ref": "env",
        },
        "NONE",
      ],
    },
  },
  "Description": "Amplify Cognito Stack for AWS Amplify CLI",
  "Outputs": {
    "AppClientID": {
      "Description": "The user pool app client id",
      "Value": {
        "Ref": "UserPoolClient",
      },
    },
    "AppClientIDWeb": {
      "Description": "The user pool app client id for web",
      "Value": {
        "Ref": "UserPoolClientWeb",
      },
    },
    "IdentityPoolId": {
      "Description": "Id for the identity pool",
      "Value": {
        "Ref": "IdentityPool",
      },
    },
    "IdentityPoolName": {
      "Value": {
        "Fn::GetAtt": [
          "IdentityPool",
          "Name",
        ],
      },
    },
    "UserPoolArn": {
      "Description": "Arn for the user pool",
      "Value": {
        "Fn::GetAtt": [
          "UserPool",
          "Arn",
        ],
      },
    },
    "UserPoolId": {
      "Description": "Id for the user pool",
      "Value": {
        "Ref": "UserPool",
      },
    },
    "UserPoolName": {
      "Value": {
        "Ref": "userPoolName",
      },
    },
  },
  "Parameters": {
    "aliasAttributes": {
      "Type": "CommaDelimitedList",
    },
    "allowUnauthenticatedIdentities": {
      "Type": "String",
    },
    "authRoleArn": {
      "Type": "String",
    },
    "authSelections": {
      "Type": "String",
    },
    "autoVerifiedAttributes": {
      "Type": "CommaDelimitedList",
    },
    "breakCircularDependency": {
      "Type": "String",
    },
    "defaultPasswordPolicy": {
      "Type": "String",
    },
    "dependsOn": {
      "Type": "CommaDelimitedList",
    },
    "emailVerificationMessage": {
      "Type": "String",
    },
    "emailVerificationSubject": {
      "Type": "String",
    },
    "env": {
      "Type": "String",
    },
    "identityPoolName": {
      "Type": "String",
    },
    "mfaConfiguration": {
      "Type": "String",
    },
    "mfaTypes": {
      "Type": "CommaDelimitedList",
    },
    "passwordPolicyCharacters": {
      "Type": "CommaDelimitedList",
    },
    "passwordPolicyMinLength": {
      "Type": "String",
    },
    "requiredAttributes": {
      "Type": "CommaDelimitedList",
    },
    "resourceName": {
      "Type": "String",
    },
    "resourceNameTruncated": {
      "Type": "String",
    },
    "serviceName": {
      "Type": "String",
    },
    "sharedId": {
      "Type": "String",
    },
    "smsAuthenticationMessage": {
      "Type": "String",
    },
    "smsVerificationMessage": {
      "Type": "String",
    },
    "unauthRoleArn": {
      "Type": "String",
    },
    "useDefault": {
      "Type": "String",
    },
    "useEnabledMfas": {
      "Type": "String",
    },
    "userPoolGroupList": {
      "Type": "CommaDelimitedList",
    },
    "userPoolName": {
      "Type": "String",
    },
    "usernameCaseSensitive": {
      "Type": "String",
    },
    "userpoolClientGenerateSecret": {
      "Type": "String",
    },
    "userpoolClientLambdaRole": {
      "Type": "String",
    },
    "userpoolClientReadAttributes": {
      "Type": "CommaDelimitedList",
    },
    "userpoolClientRefreshTokenValidity": {
      "Type": "String",
    },
    "userpoolClientSetAttributes": {
      "Type": "String",
    },
    "userpoolClientWriteAttributes": {
      "Type": "CommaDelimitedList",
    },
  },
  "Resources": {
    "IdentityPool": {
      "Properties": {
        "AllowUnauthenticatedIdentities": {
          "Ref": "allowUnauthenticatedIdentities",
        },
        "CognitoIdentityProviders": [
          {
            "ClientId": {
              "Ref": "UserPoolClient",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
          {
            "ClientId": {
              "Ref": "UserPoolClientWeb",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
        ],
        "IdentityPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "authdefaultsettings2c33facd_identitypool_2c33facd",
            {
              "Fn::Join": [
                "",
                [
                  "authdefaultsettings2c33facd_identitypool_2c33facd__",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "IdentityPoolRoleMap": {
      "DependsOn": [
        "IdentityPool",
      ],
      "Properties": {
        "IdentityPoolId": {
          "Ref": "IdentityPool",
        },
        "Roles": {
          "authenticated": {
            "Ref": "authRoleArn",
          },
          "unauthenticated": {
            "Ref": "unauthRoleArn",
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "UserPool": {
      "Properties": {
        "AliasAttributes": {
          "Ref": "aliasAttributes",
        },
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": {
          "Ref": "emailVerificationMessage",
        },
        "EmailVerificationSubject": {
          "Ref": "emailVerificationSubject",
        },
        "MfaConfiguration": {
          "Ref": "mfaConfiguration",
        },
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": {
              "Ref": "passwordPolicyMinLength",
            },
            "RequireLowercase": false,
            "RequireNumbers": false,
            "RequireSymbols": false,
            "RequireUppercase": false,
          },
        },
        "Schema": [
          {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
        ],
        "UserAttributeUpdateSettings": {
          "AttributesRequireVerificationBeforeUpdate": [
            "email",
          ],
        },
        "UserPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userPoolName",
            },
            {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "userPoolName",
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "UsernameConfiguration": {
          "CaseSensitive": false,
        },
      },
      "Type": "AWS::Cognito::UserPool",
    },
    "UserPoolClient": {
      "DependsOn": [
        "UserPool",
      ],
      "Properties": {
        "ClientName": "authde2c33facd_app_client",
        "GenerateSecret": {
          "Ref": "userpoolClientGenerateSecret",
        },
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "UserPoolClientRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userpoolClientLambdaRole",
            },
            {
              "Fn::Join": [
                "",
                [
                  "upClientLambdaRole2c33facd",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          "-",
                          {
                            "Ref": "AWS::StackName",
                          },
                        ],
                      },
                    ],
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPoolClientWeb": {
      "DependsOn": [
        "UserPool",
      ],
      "Properties": {
        "ClientName": "authde2c33facd_app_clientWeb",
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
}
`;

exports[`Check Auth Template Generated authstack template in manual flow 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ShouldNotCreateEnvResources": {
      "Fn::Equals": [
        {
          "Ref": "env",
        },
        "NONE",
      ],
    },
  },
  "Description": "Amplify Cognito Stack for AWS Amplify CLI",
  "Outputs": {
    "AmazonWebClient": {
      "Value": {
        "Ref": "amazonAppId",
      },
    },
    "AppClientID": {
      "Description": "The user pool app client id",
      "Value": {
        "Ref": "UserPoolClient",
      },
    },
    "AppClientIDWeb": {
      "Description": "The user pool app client id for web",
      "Value": {
        "Ref": "UserPoolClientWeb",
      },
    },
    "AppleWebClient": {
      "Value": {
        "Ref": "appleAppId",
      },
    },
    "CreatedSNSRole": {
      "Description": "role arn",
      "Value": {
        "Fn::GetAtt": [
          "SNSRole",
          "Arn",
        ],
      },
    },
    "FacebookWebClient": {
      "Value": {
        "Ref": "facebookAppId",
      },
    },
    "GoogleWebClient": {
      "Value": {
        "Ref": "googleClientId",
      },
    },
    "HostedUIDomain": {
      "Value": {
        "Fn::If": [
          "ShouldNotCreateEnvResources",
          {
            "Ref": "hostedUIDomainName",
          },
          {
            "Fn::Join": [
              "-",
              [
                {
                  "Ref": "hostedUIDomainName",
                },
                {
                  "Ref": "env",
                },
              ],
            ],
          },
        ],
      },
    },
    "IdentityPoolId": {
      "Description": "Id for the identity pool",
      "Value": {
        "Ref": "IdentityPool",
      },
    },
    "IdentityPoolName": {
      "Value": {
        "Fn::GetAtt": [
          "IdentityPool",
          "Name",
        ],
      },
    },
    "OAuthMetadata": {
      "Value": {
        "Ref": "oAuthMetadata",
      },
    },
    "UserPoolArn": {
      "Description": "Arn for the user pool",
      "Value": {
        "Fn::GetAtt": [
          "UserPool",
          "Arn",
        ],
      },
    },
    "UserPoolId": {
      "Description": "Id for the user pool",
      "Value": {
        "Ref": "UserPool",
      },
    },
    "UserPoolName": {
      "Value": {
        "Ref": "userPoolName",
      },
    },
  },
  "Parameters": {
    "AllowedOAuthFlows": {
      "Type": "String",
    },
    "AllowedOAuthScopes": {
      "Type": "CommaDelimitedList",
    },
    "adminQueries": {
      "Type": "String",
    },
    "allowUnauthenticatedIdentities": {
      "Type": "String",
    },
    "amazonAppId": {
      "Type": "String",
    },
    "appleAppId": {
      "Type": "String",
    },
    "authProviders": {
      "Type": "CommaDelimitedList",
    },
    "authProvidersUserPool": {
      "Type": "CommaDelimitedList",
    },
    "authRoleArn": {
      "Type": "String",
    },
    "authSelections": {
      "Type": "String",
    },
    "authTriggerConnections": {
      "Type": "CommaDelimitedList",
    },
    "autoVerifiedAttributes": {
      "Type": "CommaDelimitedList",
    },
    "breakCircularDependency": {
      "Type": "String",
    },
    "defaultPasswordPolicy": {
      "Type": "String",
    },
    "emailVerificationMessage": {
      "Type": "String",
    },
    "emailVerificationSubject": {
      "Type": "String",
    },
    "env": {
      "Type": "String",
    },
    "facebookAppId": {
      "Type": "String",
    },
    "facebookAppIdUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "facebookAppSecretUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "facebookAuthorizeScopes": {
      "NoEcho": true,
      "Type": "String",
    },
    "googleAppIdUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "googleAppSecretUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "googleAuthorizeScopes": {
      "NoEcho": true,
      "Type": "String",
    },
    "googleClientId": {
      "Type": "String",
    },
    "hostedUI": {
      "Type": "String",
    },
    "hostedUIDomainName": {
      "Type": "String",
    },
    "hostedUIProviderCreds": {
      "NoEcho": true,
      "Type": "String",
    },
    "hostedUIProviderMeta": {
      "Type": "String",
    },
    "identityPoolName": {
      "Type": "String",
    },
    "loginwithamazonAppIdUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "loginwithamazonAppSecretUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "loginwithamazonAuthorizeScopes": {
      "NoEcho": true,
      "Type": "String",
    },
    "mfaConfiguration": {
      "Type": "String",
    },
    "mfaTypes": {
      "Type": "CommaDelimitedList",
    },
    "newCallbackURLs": {
      "Type": "CommaDelimitedList",
    },
    "newLogoutURLs": {
      "Type": "CommaDelimitedList",
    },
    "oAuthMetadata": {
      "Type": "String",
    },
    "passwordPolicyCharacters": {
      "Type": "CommaDelimitedList",
    },
    "passwordPolicyMinLength": {
      "Type": "String",
    },
    "permissions": {
      "Type": "CommaDelimitedList",
    },
    "requiredAttributes": {
      "Type": "CommaDelimitedList",
    },
    "resourceName": {
      "Type": "String",
    },
    "resourceNameTruncated": {
      "Type": "String",
    },
    "selectedParties": {
      "Type": "String",
    },
    "serviceName": {
      "Type": "String",
    },
    "sharedId": {
      "Type": "String",
    },
    "signinwithappleAuthorizeScopes": {
      "NoEcho": true,
      "Type": "String",
    },
    "signinwithappleClientIdUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "signinwithappleKeyIdUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "signinwithapplePrivateKeyUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "signinwithappleTeamIdUserPool": {
      "NoEcho": true,
      "Type": "String",
    },
    "smsAuthenticationMessage": {
      "Type": "String",
    },
    "smsVerificationMessage": {
      "Type": "String",
    },
    "thirdPartyAuth": {
      "Type": "String",
    },
    "triggers": {
      "Type": "String",
    },
    "unauthRoleArn": {
      "Type": "String",
    },
    "useDefault": {
      "Type": "String",
    },
    "useEnabledMfas": {
      "Type": "String",
    },
    "userPoolGroups": {
      "Type": "String",
    },
    "userPoolName": {
      "Type": "String",
    },
    "usernameCaseSensitive": {
      "Type": "String",
    },
    "userpoolClientGenerateSecret": {
      "Type": "String",
    },
    "userpoolClientLambdaRole": {
      "Type": "String",
    },
    "userpoolClientReadAttributes": {
      "Type": "CommaDelimitedList",
    },
    "userpoolClientRefreshTokenValidity": {
      "Type": "String",
    },
    "userpoolClientSetAttributes": {
      "Type": "String",
    },
    "userpoolClientWriteAttributes": {
      "Type": "CommaDelimitedList",
    },
    "verificationBucketName": {
      "Type": "String",
    },
  },
  "Resources": {
    "CustomMessageConfirmationBucket": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AccessControl": "Private",
        "BucketName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "verificationBucketName",
            },
            {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "verificationBucketName",
                  },
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "CorsConfiguration": {
          "CorsRules": [
            {
              "AllowedHeaders": [
                "Authorization",
                "Content-length",
              ],
              "AllowedMethods": [
                "GET",
              ],
              "AllowedOrigins": [
                "*",
              ],
              "MaxAge": 3000,
            },
          ],
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "HostedUIDomainResource": {
      "Properties": {
        "Domain": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "hostedUIDomainName",
            },
            {
              "Fn::Join": [
                "-",
                [
                  {
                    "Ref": "hostedUIDomainName",
                  },
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
    "HostedUIFacebookProviderResource": {
      "Properties": {
        "AttributeMapping": {
          "email": "email",
          "username": "id",
        },
        "ProviderDetails": {
          "authorize_scopes": {
            "Ref": "facebookAuthorizeScopes",
          },
          "client_id": {
            "Ref": "facebookAppIdUserPool",
          },
          "client_secret": {
            "Ref": "facebookAppSecretUserPool",
          },
        },
        "ProviderName": "Facebook",
        "ProviderType": "Facebook",
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "HostedUIGoogleProviderResource": {
      "Properties": {
        "AttributeMapping": {
          "email": "email",
          "username": "sub",
        },
        "ProviderDetails": {
          "authorize_scopes": {
            "Ref": "googleAuthorizeScopes",
          },
          "client_id": {
            "Ref": "googleAppIdUserPool",
          },
          "client_secret": {
            "Ref": "googleAppSecretUserPool",
          },
        },
        "ProviderName": "Google",
        "ProviderType": "Google",
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "HostedUILoginWithAmazonProviderResource": {
      "Properties": {
        "AttributeMapping": {
          "email": "email",
          "username": "user_id",
        },
        "ProviderDetails": {
          "authorize_scopes": {
            "Ref": "loginwithamazonAuthorizeScopes",
          },
          "client_id": {
            "Ref": "loginwithamazonAppIdUserPool",
          },
          "client_secret": {
            "Ref": "loginwithamazonAppSecretUserPool",
          },
        },
        "ProviderName": "LoginWithAmazon",
        "ProviderType": "LoginWithAmazon",
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "HostedUISignInWithAppleProviderResource": {
      "Properties": {
        "AttributeMapping": {
          "email": "email",
        },
        "ProviderDetails": {
          "authorize_scopes": {
            "Ref": "signinwithappleAuthorizeScopes",
          },
          "client_id": {
            "Ref": "signinwithappleClientIdUserPool",
          },
          "key_id": {
            "Ref": "signinwithappleKeyIdUserPool",
          },
          "private_key": {
            "Ref": "signinwithapplePrivateKeyUserPool",
          },
          "team_id": {
            "Ref": "signinwithappleTeamIdUserPool",
          },
        },
        "ProviderName": "SignInWithApple",
        "ProviderType": "SignInWithApple",
        "UserPoolId": {
          "Ref": "UserPool",
        },
      },
      "Type": "AWS::Cognito::UserPoolIdentityProvider",
    },
    "IdentityPool": {
      "Properties": {
        "AllowUnauthenticatedIdentities": {
          "Ref": "allowUnauthenticatedIdentities",
        },
        "CognitoIdentityProviders": [
          {
            "ClientId": {
              "Ref": "UserPoolClient",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
          {
            "ClientId": {
              "Ref": "UserPoolClientWeb",
            },
            "ProviderName": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${client}",
                {
                  "client": {
                    "Ref": "UserPool",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                },
              ],
            },
          },
        ],
        "IdentityPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "extauth387063394_identitypool_87063394",
            {
              "Fn::Join": [
                "",
                [
                  "extauth387063394_identitypool_87063394__",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "SupportedLoginProviders": {
          "accounts.google.com": {
            "Ref": "googleClientId",
          },
          "appleid.apple.com": {
            "Ref": "appleAppId",
          },
          "graph.facebook.com": {
            "Ref": "facebookAppId",
          },
          "www.amazon.com": {
            "Ref": "amazonAppId",
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPool",
    },
    "IdentityPoolRoleMap": {
      "DependsOn": [
        "IdentityPool",
        "UserPoolClient",
        "UserPoolClientWeb",
      ],
      "Properties": {
        "IdentityPoolId": {
          "Ref": "IdentityPool",
        },
        "RoleMappings": {
          "UserPoolClientRoleMapping": {
            "AmbiguousRoleResolution": "AuthenticatedRole",
            "IdentityProvider": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${userPool}:\${client}",
                {
                  "client": {
                    "Ref": "UserPoolClient",
                  },
                  "region": {
                    "Ref": "AWS::Region",
                  },
                  "userPool": {
                    "Ref": "UserPool",
                  },
                },
              ],
            },
            "Type": "Token",
          },
          "UserPoolWebClientRoleMapping": {
            "AmbiguousRoleResolution": "AuthenticatedRole",
            "IdentityProvider": {
              "Fn::Sub": [
                "cognito-idp.\${region}.amazonaws.com/\${userPool}:\${webClient}",
                {
                  "region": {
                    "Ref": "AWS::Region",
                  },
                  "userPool": {
                    "Ref": "UserPool",
                  },
                  "webClient": {
                    "Ref": "UserPoolClientWeb",
                  },
                },
              ],
            },
            "Type": "Token",
          },
        },
        "Roles": {
          "authenticated": {
            "Ref": "authRoleArn",
          },
          "unauthenticated": {
            "Ref": "unauthRoleArn",
          },
        },
      },
      "Type": "AWS::Cognito::IdentityPoolRoleAttachment",
    },
    "SNSRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Condition": {
                "StringEquals": {
                  "sts:ExternalId": "extaut87063394_role_external_id",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cognito-idp.amazonaws.com",
              },
              "Sid": "",
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "sns:Publish",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "extaut87063394-sns-policy",
          },
        ],
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "extaut87063394_sns-role",
            {
              "Fn::Join": [
                "",
                [
                  "sns87063394",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          "-",
                          {
                            "Ref": "AWS::StackName",
                          },
                        ],
                      },
                    ],
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPool": {
      "DependsOn": [
        "SNSRole",
      ],
      "Properties": {
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": {
          "Ref": "emailVerificationMessage",
        },
        "EmailVerificationSubject": {
          "Ref": "emailVerificationSubject",
        },
        "EnabledMfas": [
          "SMS_MFA",
          "SOFTWARE_TOKEN_MFA",
        ],
        "MfaConfiguration": {
          "Ref": "mfaConfiguration",
        },
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": {
              "Ref": "passwordPolicyMinLength",
            },
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true,
          },
        },
        "Schema": [
          {
            "Mutable": true,
            "Name": "address",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "birthdate",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "email",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "family_name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "middle_name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "gender",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "locale",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "given_name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "name",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "nickname",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "phone_number",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "preferred_username",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "picture",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "profile",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "updated_at",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "website",
            "Required": true,
          },
          {
            "Mutable": true,
            "Name": "zoneinfo",
            "Required": true,
          },
        ],
        "SmsAuthenticationMessage": {
          "Ref": "smsAuthenticationMessage",
        },
        "SmsConfiguration": {
          "ExternalId": "extaut87063394_role_external_id",
          "SnsCallerArn": {
            "Fn::GetAtt": [
              "SNSRole",
              "Arn",
            ],
          },
        },
        "SmsVerificationMessage": {
          "Ref": "smsVerificationMessage",
        },
        "UserAttributeUpdateSettings": {
          "AttributesRequireVerificationBeforeUpdate": [
            "email",
          ],
        },
        "UserPoolName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userPoolName",
            },
            {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "userPoolName",
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
        "UsernameConfiguration": {
          "CaseSensitive": false,
        },
      },
      "Type": "AWS::Cognito::UserPool",
    },
    "UserPoolClient": {
      "DependsOn": [
        "HostedUIFacebookProviderResource",
        "HostedUIGoogleProviderResource",
        "HostedUILoginWithAmazonProviderResource",
        "HostedUISignInWithAppleProviderResource",
        "UserPool",
      ],
      "Properties": {
        "AllowedOAuthFlows": [
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": [
          "phone",
          "email",
          "openid",
          "profile",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": [
          "https://localhost:3000/",
        ],
        "ClientName": "extaut87063394_app_client",
        "GenerateSecret": {
          "Ref": "userpoolClientGenerateSecret",
        },
        "LogoutURLs": [
          "https://localhost:3000/",
        ],
        "ReadAttributes": {
          "Ref": "userpoolClientReadAttributes",
        },
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "SupportedIdentityProviders": [
          "Facebook",
          "Google",
          "LoginWithAmazon",
          "SignInWithApple",
          "COGNITO",
        ],
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
        "WriteAttributes": {
          "Ref": "userpoolClientWriteAttributes",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "UserPoolClientRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            {
              "Ref": "userpoolClientLambdaRole",
            },
            {
              "Fn::Join": [
                "",
                [
                  "upClientLambdaRole87063394",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          "-",
                          {
                            "Ref": "AWS::StackName",
                          },
                        ],
                      },
                    ],
                  },
                  "-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "UserPoolClientWeb": {
      "DependsOn": [
        "HostedUIFacebookProviderResource",
        "HostedUIGoogleProviderResource",
        "HostedUILoginWithAmazonProviderResource",
        "HostedUISignInWithAppleProviderResource",
        "UserPool",
      ],
      "Properties": {
        "AllowedOAuthFlows": [
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": [
          "phone",
          "email",
          "openid",
          "profile",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": [
          "https://localhost:3000/",
        ],
        "ClientName": "extaut87063394_app_clientWeb",
        "LogoutURLs": [
          "https://localhost:3000/",
        ],
        "ReadAttributes": {
          "Ref": "userpoolClientReadAttributes",
        },
        "RefreshTokenValidity": {
          "Ref": "userpoolClientRefreshTokenValidity",
        },
        "SupportedIdentityProviders": [
          "Facebook",
          "Google",
          "LoginWithAmazon",
          "SignInWithApple",
          "COGNITO",
        ],
        "TokenValidityUnits": {
          "RefreshToken": "days",
        },
        "UserPoolId": {
          "Ref": "UserPool",
        },
        "WriteAttributes": {
          "Ref": "userpoolClientWriteAttributes",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
  },
}
`;
